# Audio-ETL-script

./: CMakeLists.txt  README.md  argvmain.cpp  audio_utilities.cpp  audio_utilities.h  cmsvscript.c  cmsvscript.cpp  dependency.h  file_manager.cpp  file_manager.h  metadata.cpp  metadata.h  song_manager.h  url_utilities.cpp  url_utilities.h  usage_helper.h
headers/: audio_utilities.h  dependency.h  file_manager.h  metadata.h  song_manager.h  url_utilities.h  usage_helper.h
src/: argvmain.cpp  audio_utilities.cpp  dependency.cpp  file_manager.cpp  song_manager.cpp  url_utilities.cpp  usage_helper.cpp
